# libjson

./: JSONOptions.h  README.md  UpgradeLog.htm  libjson.h  libjson.vcproj  libjson.vcxproj  makefile  meson.build
VS.2013/: libjson.vcxproj
VS.2015/: libjson.sln  libjson.vcxproj
VS.2017/: libjson.sln  libjson.vcxproj
VS.2019/: libjson.sln  libjson.vcxproj  libjson.vpj
VS.2022/: libjson.sln  libjson.vcxproj  libjson.vcxproj.filters
_internal/Source/: JSONChildren.cpp  JSONDefs.h  JSONMemory.h  JSONNode.cpp  JSONNode.h  JSONValidator.cpp  JSONWorker.cpp  JSONWorker.h  NumberToString.h  internalJSONNode.cpp  internalJSONNode.h  libjson.cpp
prj/: libjson.vpj  libjson.vpw
